--- a/src/assets/styles/UserCard.css
+++ b/src/assets/styles/UserCard.css
@@ -8,14 +8,20 @@ span{
     font-size: small;
 }
 .user{
+    width: 16em;
     padding: 20px;
     border-radius: 3px;
     box-shadow: 0px 0px 1px 0px;
 }
 
+.user__title{
+    padding-bottom: 10px;
+}
+
 .user__item{
     display: flex;
     flex-direction: column;
+    padding: 10px 5px;
 }
 
 .user__label{
@@ -25,15 +31,18 @@ span{
 .btn{
     display: flex;
     justify-content: flex-end;
-    gap: 10px;
+    gap: 20px;
+    margin-top: 15px;
 }
 
 .btn__delete, .btn__edit{
     border: none;
-    border-radius: 2px;
-    box-shadow: 0px 0px 1px 0px;
-    font-size: 20px;
+    border-radius: 5px;
+    width: 2em;
+    /* box-shadow: 0px 0px 1px 0px; */
+    font-size: 22px;
     color: white;
+    padding: 4px;
 }
 .btn__delete{
     background-color: rgb(224, 46, 46);
