--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,10 @@
     margin-bottom: 50px;
 }
 
+.title{
+    display: flex;
+    align-items: flex-end;
+}
 .btn_create{
     padding: 10px 20px;
     background-color: #5f6deb;
