--- a/src/assets/styles/UserCard.css
+++ b/src/assets/styles/UserCard.css
@@ -52,3 +52,15 @@ span{
     background-color: rgb(223, 223, 223);
 }
 
+
+@media (max-width: 425px) {
+
+    .user{
+        width: 11em;
+        padding: 13px;
+    }
+    
+    .btn__delete, .btn__edit{
+       font-size: 15px;
+    }
+}
