--- a/src/assets/styles/UserCard.css
+++ b/src/assets/styles/UserCard.css
@@ -59,6 +59,10 @@ span{
         width: 11em;
         padding: 13px;
     }
+
+    .user__value{
+        font-size: 12px;
+    }
     
     .btn__delete, .btn__edit{
        font-size: 15px;
